# MARL-Drones

./: README.md  notebook.ipynb  pypi_description.md  pyproject.toml
experiments/learning/: multiagent.py  singleagent.py  test_multiagent.py  test_singleagent.py
gym_pybullet_drones/: __init__.py
gym_pybullet_drones/assets/: architrave.urdf  cf2.dae  cf2p.urdf  cf2x.urdf  hb.urdf
gym_pybullet_drones/control/: BaseControl.py  DSLPIDControl.py  SimplePIDControl.py  __init__.py
gym_pybullet_drones/envs/: BaseAviary.py  CtrlAviary.py  DynAviary.py  VelocityAviary.py  VisionAviary.py
gym_pybullet_drones/envs/multi_agent_rl/: BaseMultiagentAviary.py  FlockAviary.py  LeaderFollowerAviary.py  MeetupAviary.py  __init__.py
gym_pybullet_drones/envs/single_agent_rl/: BaseSingleAgentAviary.py  FlyThruGateAviary.py  HoverAviary.py  TakeoffAviary.py  TuneAviary.py  __init__.py
gym_pybullet_drones/utils/: Logger.py  enums.py  utils.py
scripts/learning/: multiagent.py  multiagent_ddpg.py  multiagent_ppo.py  singleagent.py  singleagent_ddpg.py  singleagent_ppo.py  test_multiagent.py  test_multiagent_ddpg.py  test_multiagent_ppo.py  test_singleagent.py
scripts/learning/central_a2c/: model.py  observer.py
scripts/learning/central_critic/: fill_in_actions.py  model.py  observer.py
scripts/plots/: results.py
scripts/videos/: png2gif.py
scripts/visualize/: gymbullet.py
