[tool.poetry]
name = "marl-drones"
version = "0.0.3"
description = "Multi-Agent Reinforcement Learning for Drones"
authors = ["Jacopo Panerati <jacopo.panerati@utoronto.ca>", "Lavesh Panjwani <lpanjwani@outlook.com>"]
license = "MIT"
readme = "pypi_description.md"
repository = "https://github.com/lpanjwani/MARL-Drones"
packages = [
    { include = "gym_pybullet_drones" },
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.23.0"
Pillow = "^9.0"
matplotlib = "^3.5"
cycler = "^0.10"
gym = "^0.21"
pybullet = "^3.2"
torch = "1.11.0"
"ray[rllib]" = "1.9"
stable-baselines3 = "1.5.0"
scipy = "^1.8"
tensorboard = "^2.9"
protobuf = "^3.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@main"]
build-backend = "poetry.core.masonry.api"
